--- a/vertigo-rest/pom.xml
+++ b/vertigo-rest/pom.xml
@@ -5,23 +5,25 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.1-SNAPSHOT</version>
+		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
 	<artifactId>vertigo-rest</artifactId>
+	<packaging>jar</packaging>
 	<name>vertigo-rest</name>
 
 	<dependencies>
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
