--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -116,6 +116,20 @@
 			<version>1.1.3</version>
 		</dependency>
 
+		<!-- Distributed -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>2.4.2</version>
+		    <type>jar</type>
+		    <scope>compile</scope>
+		</dependency>
+		<!-- /Distributed -->
 
 		<dependency>
 			<!--Embedded Server for tests -->
