--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -122,12 +122,31 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.3</version>
 		</dependency>
+		<!-- DÃ©pendances pour implÃ© REST de distributed -->
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.17.1</version>
+			<optional>true</optional> <!-- pour implÃ© REST de DistributedWork -->
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>1.17.1</version>
+			<optional>true</optional> <!-- pour implÃ© REST de DistributedWork -->
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId> <!-- pour test de DistributedWork -->
+			<artifactId>jersey-grizzly2</artifactId>
+			<version>1.17.1</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- /DÃ©pendances pour implÃ© REST de distributed -->
 		<dependency>
 		    <groupId>redis.clients</groupId>
 		    <artifactId>jedis</artifactId>
 		    <version>2.4.2</version>
-		    <type>jar</type>
-		    <scope>compile</scope>
+		    <optional>true</optional><!-- pour implÃ© REDIS de DistributedWork -->
 		</dependency>
 		<!-- /Distributed -->
 
