--- a/vertigo-quarto-impl/pom.xml
+++ b/vertigo-quarto-impl/pom.xml
@@ -95,6 +95,19 @@
 			<version>3.2.1</version>
 			<optional>true</optional>
 		</dependency>	
+		
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>1.17.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId> <!-- pour test de DistributedWork -->
+			<artifactId>jersey-grizzly2</artifactId>
+			<version>1.17.1</version>
+			<scope>test</scope>
+		</dependency>
 		<!--/Open Office dependencies-->
 	</dependencies>
 </project>
