--- a/vertigo-ccc/pom.xml
+++ b/vertigo-ccc/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.7.6-SNAPSHOT</version>
+		<version>0.7.5a</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
