--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License. -->
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.8.0-RC1</version>
+		<version>0.8.0-SNAPSHOT</version>
 		<relativePath>./vertigo-parent</relativePath>
 	</parent>
 	
