--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -16,6 +16,16 @@
 
 	<dependencies>
 		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		    <version>2.12.1</version> <!-- To avoid conflict of version, we must exclude log4j-api version when necessary -->
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>2.12.1</version> <!-- To avoid conflict of version, we must exclude log4j-core version when necessary -->
+		</dependency>
+		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
